# rat

./: Cargo.toml  README.md  rustfmt.toml
crates/client/: Cargo.toml
crates/client/src/: client.rs  db.rs  main.rs
crates/client/src/ui/: config.rs  mod.rs
crates/client/src/ui/views/: channel.rs  mod.rs  user_name.rs  welcome.rs
crates/client/src/ui/widgets/: input.rs  message.rs  mod.rs
crates/server/: Cargo.toml
crates/server/src/: client.rs  main.rs  manager.rs  world.rs
crates/server/src/db/: client.rs  mod.rs  room.rs  user.rs
crates/server/src/tasks/: client.rs  mod.rs  server.rs
src/: event.rs  executor.rs  lib.rs  main.rs  ring.rs  stream_ext.rs  timer.rs
