[package]
name = "rat"
version = "0.1.0"
authors = ["Romain TRUCHI <romain.truchi.06@gmail.com>"]
edition = "2021"

[workspace]
members = ["crates/client", "crates/server"]

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

serde = { version = "1", features = ["derive"] }
ron = "0.7"

uuid = { version = "0.8", features = ["v4", "serde"] }
